part1/1-07-external-access-with-ingress/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dowk-22-logger-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logger-app
  template:
    metadata:
      labels:
        app: logger-app
    spec:
      containers:
        - name: logger-app
          image: jeknom/dowk-22-logger-app:0.2
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
