part1/1-07-external-access-with-ingress/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dowk-22-logger-app-svc
spec:
  type: ClusterIP
  selector:
    app: logger-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
